# wxee

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  readthedocs.yml  setup.py
.github/: stale.yml
.github/scripts/: make_ee_token.py
.github/workflows/: ci.yml  publish.yaml  tests-coverage.yml  tests.yml
docs/: api.rst  conf.py  contributing.rst  eexarray.rst  examples.rst  getting_started.rst  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: contributing.doctree  ee.Image.eex.to_tif.doctree  eexarray.doctree  environment.pickle  examples.doctree  index.doctree  modules.doctree  wxee.doctree
docs/_build/doctrees/examples/: climatology.doctree  climatology_anomaly.doctree  climatology_mean.doctree  downloading_images_and_collections.doctree  fire_progressions.doctree  image_collection_to_xarray.doctree  modis.doctree  temporal_aggregation.doctree  temporal_interpolation.doctree  temporal_resampling.doctree
docs/_build/doctrees/nbsphinx/examples/: climatology.ipynb  climatology_anomaly.ipynb  fire_progressions.ipynb  image_collection_to_xarray.ipynb  modis.ipynb  temporal_aggregation.ipynb  temporal_resampling.ipynb
docs/_build/doctrees/stubs/: ee.Image.eex.to_tif.doctree
docs/_build/html/: .buildinfo  contributing.html  eexarray.html  examples.html  genindex.html  image.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  wxee.html
docs/_build/html/.doctrees/: ee.Image.eex.to_tif.doctree  eexarray.doctree  environment.pickle  image.doctree  index.doctree
docs/_build/html/.doctrees/stubs/: ee.Image.eex.to_tif.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/eexarray/: Image.html  ImageCollection.html  climatology.html  image.html  time_series.html
docs/_build/html/_modules/wxee/: climatology.html  collection.html  image.html  time_series.html
docs/_build/html/_sources/: contributing.rst.txt  ee.Image.eex.to_tif.rst.txt  examples.rst.txt  image.rst.txt  index.rst.txt  wxee.rst.txt
docs/_build/html/_sources/examples/: climatology.ipynb.txt  climatology_mean.ipynb.txt  downloading_images_and_collections.ipynb.txt  fire_progressions.ipynb.txt  image_collection_to_xarray.ipynb.txt  temporal_aggregation.ipynb.txt  temporal_resampling.ipynb.txt
docs/_build/html/examples/: climatology.html  climatology.ipynb  climatology_anomaly.html  climatology_anomaly.ipynb  climatology_mean.html  downloading_images_and_collections.html  downloading_images_and_collections.ipynb  eemont.html  fire_progressions.html  image_collection_to_xarray.html  image_collection_to_xarray.ipynb  modis.html  modis.ipynb  temporal_aggregation.html  temporal_interpolation.html  temporal_interpolation.ipynb  temporal_resampling.html
docs/_build/html/stubs/: ee.Image.eex.to_tif.html
docs/examples/: climatology.ipynb  climatology_anomaly.ipynb  climatology_mean.ipynb  downloading_images_and_collections.ipynb  fire_progressions.ipynb  image_collection_to_xarray.ipynb  temporal_aggregation.ipynb  temporal_interpolation.ipynb  temporal_resampling.ipynb  time_series.ipynb
eexarray/: Image.py  ImageCollection.py  __init__.py  accessors.py  climatology.py  collection.py  constants.py  exceptions.py  image.py  time_series.py  utils.py
test/: conftest.py  test_accessors.py  test_collection.py  test_constants.py  test_image.py  test_interpolation.py  test_params.py  test_time_series.py  test_utils.py  test_xarray.py
test/test_data/: COPERNICUS_S2_SR_test.nc  IDAHO_EPSCOR_GRIDMET_20180201.time.20180201T060000.pr.tif  IDAHO_EPSCOR_GRIDMET_20180201.time.20180201T060000.rmax.tif  IDAHO_EPSCOR_GRIDMET_20180202.time.20180202T060000.pr.tif  IDAHO_EPSCOR_GRIDMET_20180202.time.20180202T060000.rmax.tif  IDAHO_EPSCOR_GRIDMET_20180203.time.20180203T060000.pr.tif  IDAHO_EPSCOR_GRIDMET_20180203.time.20180203T060000.rmax.tif
wxee/: __init__.py  accessors.py  climatology.py  collection.py  constants.py  exceptions.py  image.py  interpolation.py  params.py  time_series.py  utils.py  xarray.py
